исправлено удаление во всех имеющихся сущностей, изменены сервисы-обработчики. изменены несколько api.